--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,65 @@
-.App {
+/* // signup page  */
+body {
+  background: rgb(245, 241, 241);
+}
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.signup-form {
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 2rem;
+  /* border: 2px solid red; */
+}
+.signup-form .register-form {
+  padding: 2rem;
+}
+.signup-form .register-form .form-title {
+  padding: 2px;
+  text-decoration: underline;
+  font-weight: 500;
+}
+.form-group input {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid black;
+  margin-bottom: 5px;
+}
+
+.form-button input {
+  padding: 4px 6px;
+  background-color: rgb(44, 195, 44);
+  margin-top: 10px;
+  border: 1px solid black;
+  border-radius: 0.4rem;
+}
+.form-button input:hover {
+  transform: scale(1.02);
+  background-color: rgb(44, 166, 44);
+}
+
+.signImage {
+  width: 20rem;
+}
+.signup-image p {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 700px) {
+  .signup-form {
+    flex-direction: column;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* // footer  */
+.footer {
+  height: 2rem;
+  background-color: #fff;
+  text-align: center;
 }
