--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,16 @@ section {
 .signup-form .register-form .form-title {
   padding: 2px;
   text-decoration: underline;
-  font-weight: 500;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+.form-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.form-group label {
+  margin-right: 1rem;
 }
 .form-group input {
   outline: none;
