--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
 body {
   background: rgb(245, 241, 241);
 }
+* {
+  padding: 0;
+  margin: 0;
+}
 section {
   margin: 3rem auto;
 }
@@ -89,6 +93,7 @@ section {
   background-color: #fff;
   text-align: center;
   margin-top: 10px;
+  width: 100vw;
 }
 
 /* // contact page  */
@@ -146,4 +151,27 @@ section {
   .button {
     font-size: small;
   }
+}
+
+/* // Home page  */
+.home-page {
+  width: 100%;
+  min-height: 81vh;
+  background: linear-gradient(
+    to right,
+    pink 0%,
+    pink 50%,
+    paleturquoise 50%,
+    paleturquoise 100%
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 81vh;
 }
