--- a/client/src/App.css
+++ b/client/src/App.css
@@ -269,3 +269,20 @@ section {
   background: rgb(7, 7, 155);
   color: rgb(255, 255, 255);
 }
+
+/* // logout page  */
+.logout-page {
+  width: 100%;
+  min-height: 81vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logout-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 81vh;
+}
